--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <header id="header" class="row">   
 
    		<div class="header-logo">
-	        <a href="index.html">Dazzle</a>
+	        <a href="index.html">Aditya Pakki</a>
 	    </div>
 
 	   	<nav id="header-nav-wrap">
@@ -73,24 +73,13 @@
             <div class="row contents">                     
                 <div class="home-content-left">
 
-                    <h3 data-aos="fade-up">Welcome to Dazzle</h3>
+                    <h3 data-aos="fade-up">Welcome to home page of Aditya Pakki</h3>
 
                     <h1 data-aos="fade-up">
                         Creative Landing <br>
                         Page to Showcase <br>
                         Your Amazing App.
                     </h1>
-
-                    <div class="buttons" data-aos="fade-up">
-                        <a href="#download" class="smoothscroll button stroke">
-                            <span class="icon-circle-down" aria-hidden="true"></span>
-                            Download App
-                        </a>
-                        <a href="http://player.vimeo.com/video/14592941?title=0&amp;byline=0&amp;portrait=0&amp;color=39b54a" data-lity class="button stroke">
-                            <span class="icon-play" aria-hidden="true"></span>
-                            Watch Video
-                        </a>
-                    </div>                                         
 
                 </div>
 
