--- a/index.html
+++ b/index.html
@@ -73,12 +73,11 @@
             <div class="row contents">                     
                 <div class="home-content-left">
 
-                    <h3 data-aos="fade-up">Welcome to home page of Aditya Pakki</h3>
+                    <h3 data-aos="fade-up">Welcome </h3>
 
                     <h1 data-aos="fade-up">
-                        Creative Landing <br>
-                        Page to Showcase <br>
-                        Your Amazing App.
+                        to the home page <br>
+                        of Aditya Pakki.
                     </h1>
 
                 </div>
@@ -128,9 +127,8 @@
                 <h1 class="intro-header" data-aos="fade-up">About Our App</h1>
             </div>
             <div class="col-eight">
-                <p class="lead" data-aos="fade-up">
-		    Introduction
-                </p>
+		<p> Welcome
+		</p>
             </div>                       
             
         </div>
