--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
             <div class="row contents">                     
                 <div class="home-content-left">
 
-                    <h3 data-aos="fade-up">Welcome </h3>
-
                     <h1 data-aos="fade-up">
-                        to the home page <br>
-                        of Aditya Pakki.
+			Welcome to the home page of <br>
+                        Aditya Pakki.
                     </h1>
 
                 </div>
@@ -124,10 +122,11 @@
         <div class="row about-intro">
 
             <div class="col-four">
-                <h1 class="intro-header" data-aos="fade-up">About Our App</h1>
+                <h1 class="intro-header" data-aos="fade-up">About Me</h1>
             </div>
             <div class="col-eight">
-		<p> Welcome
+		<p> Copy the context from the google site , which talks about the work that I have done in the 
+		    undergrad as well as some grad work in the US.
 		</p>
             </div>                       
             
