--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Dazzle</title>
+    <title>Aditya Pakki</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -41,25 +41,21 @@
     <!-- header 
    ================================================== -->
    <header id="header" class="row">   
-
    		<div class="header-logo">
 	        <a href="index.html">Aditya Pakki</a>
 	    </div>
 
 	   	<nav id="header-nav-wrap">
 			<ul class="header-main-nav">
-				<li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
-                <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-				<li><a class="smoothscroll"  href="#pricing" title="pricing">Pricing</a></li>
-				<li><a class="smoothscroll"  href="#testimonials" title="testimonials">Testimonials</a></li>
-				<li><a class="smoothscroll"  href="#download" title="download">Download</a></li>	
+				<li class="current"><a class="smoothscroll"  href="#about" title="home">About</a></li>
+		                <li><a class="smoothscroll"  href="#experience" title="about">Experience</a></li>
+				<li><a class="smoothscroll"  href="#research" title="pricing">Research</a></li>
+				<li><a class="smoothscroll"  href="#resume" title="testimonials">Curriculum Vitae</a></li>
+				<li><a class="smoothscroll"  href="#contact" title="download">Contact</a></li>	
 			</ul>
-
-            <a href="#" title="sign-up" class="button button-primary cta">Sign Up</a>
 		</nav>
 
 		<a class="header-menu-toggle" href="#"><span>Menu</span></a>    	
-   	
    </header> <!-- /header -->
 
 
@@ -118,9 +114,7 @@
     <!-- about
     ================================================== -->
     <section id="about">
-
         <div class="row about-intro">
-
             <div class="col-four">
                 <h1 class="intro-header" data-aos="fade-up">About Me</h1>
             </div>
@@ -129,17 +123,12 @@
 		    undergrad as well as some grad work in the US.
 		</p>
             </div>                       
-            
         </div>
 
         <div class="row about-features">
 
             <div class="features-list block-1-3 block-m-1-2 block-mob-full group">
-
                 <div class="bgrid feature" data-aos="fade-up">	
-
-                    <span class="icon"><i class="icon-window"></i></span>            
-
                     <div class="service-content">	
 
                         <h3>Fully Resposive</h3>
