--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
 	   	<nav id="header-nav-wrap">
 			<ul class="header-main-nav">
-				<li class="current"><a class="smoothscroll"  href="#about" title="home">About</a></li>
-		                <li><a class="smoothscroll"  href="#experience" title="about">Experience</a></li>
-				<li><a class="smoothscroll"  href="#research" title="pricing">Research</a></li>
-				<li><a class="smoothscroll"  href="#resume" title="testimonials">Curriculum Vitae</a></li>
-				<li><a class="smoothscroll"  href="#contact" title="download">Contact</a></li>	
+				<li class="current"><a class="smoothscroll"  href="#about" title="About">About</a></li>
+		                <li><a class="smoothscroll"  href="#experience" title="Experience">Experience</a></li>
+				<li><a class="smoothscroll"  href="#research" title="Research">Research</a></li>
+				<li><a class="smoothscroll"  href="#resume" title="Curriculum Vitae">Curriculum Vitae</a></li>
+				<li><a class="smoothscroll"  href="#contact" title="Contact">Contact</a></li>	
 			</ul>
 		</nav>
 
@@ -61,7 +61,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000>
+   <section id="About" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000>
 
         <div class="overlay"></div>
         <div class="home-content">        
@@ -113,7 +113,7 @@
 
     <!-- about
     ================================================== -->
-    <section id="about">
+    <section id="Experience">
         <div class="row about-intro">
             <div class="col-four">
                 <h1 class="intro-header" data-aos="fade-up">About Me</h1>
@@ -253,7 +253,7 @@
 
         </div>  <!-- end about-bottom-image -->       
         
-    </section> <!-- end about -->  
+    </section> <!-- end experience -->  
    
 
     <!-- pricing
@@ -505,7 +505,7 @@
 
       		<div class="col-twelve">
 	      		<div class="copyright">
-		         	<span>© Copyright Dazzle 2017.</span> 
+		         	<span>© Copyright Aditya Pakki 2017.</span> 
 		         	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>		         	
 		         </div>
 
