testing new pages

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -3,7 +3,7 @@ layout: page
 title: Projects
 subtitle: Side projects are fun.
 desc: Side projects are fun.
-permalink: /projects/
+permalink: /research/
 ---
 
 <p>Lorem markdownum liquidas. Ad qui saxo prodis una, dextra medicamina fremit voce, Iuppiter, sum morte, et. Est hos est vultum ocius dextra praetulit aequoris hominem.</p>
