even better changes

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Projects
+title: Research
 subtitle: Side projects are fun.
 desc: Side projects are fun.
 permalink: /research/
