--- a/_pages/work.html
+++ b/_pages/work.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Work
+title: Experience
 subtitle: Happy users, happy clients.
 desc: Happy users, happy clients.
-permalink: /work/
+permalink: /experience/
 ---
 
 <p>Mea speciem facta postquam quae ab catulo, bracchia nepotis: est. Suae <strong>posset cingebant</strong> patris</p>
