final commit for the day

--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -8,7 +8,7 @@ subtitle: My resume in detail
 
 <div class="site-links">
   <div class="site-contact">
-    <ul>
+    <ol>
       {% if site.email %}
       <li><a href="mailto:{{ site.email }}">Email</a></li>
       {% endif %}
@@ -24,5 +24,6 @@ subtitle: My resume in detail
       {% if site.facebook_username %}
       <li><a target="_blank" rel="external" href="https://facebook.com/{{ site.facebook_username }}">Facebook</a></li>
       {% endif %}
-    </ul>
+    </ol>
   </div>
+</div>
