--- a/_pages/about.html
+++ b/_pages/about.html
@@ -8,10 +8,11 @@ permalink: /about/
 <div class="pretty-links">
 <div class="lead lead-about">Some intro text that is eye catching and should put you reader at ease and confident in your skills.
 </div>
-Hi , My name is Aditya and I'm currently a summer intern at Los Alamos National Laboratory, New Mexico in the Data Science at Scale school.
-
+Hi , My name is Aditya and I'm currently a summer intern at Los Alamos National Laboratory, New Mexico in the Data Science at Scale summer school. 
 I'll be starting my Ph.D. in Computer Science at the University of Minnesota, Twin Cities from Fall 2017.
+
 ---
+
 I've a Masters degree in Computer Science from University of Utah, [School of Computing] (www.cs.utah.edu) in the summer 
 of 2016. I was advised by [Prof. Martin Berzins] (http://sci.utah.edu/people/mb.html), during my time at the [Scientific Computing and Imaging Institute] (sci.utah.edu) in the [University of Utah] (utah.edu). 
 Earlier, I got my Bachelors degree in Information Technology at [Jawaharlal Nehru Technological University] (http://jntuh.ac.in/), Hyderabad, India where I was mentored by Prof. P Gopalakrishna.
