move the image to resume

--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -2,10 +2,13 @@
 layout: page
 title: Resume
 permalink: /resume/
-subtitle: My resume in detail
+subtitle: Connect with me by -
 ---
 
-
+<p>
+<figure class="site-profile">
+    <img src="{{ site.baseurl }}/assets/img/profile.jpg">
+</figure>
 <div class="site-links">
   <div class="site-contact">
     <ol>
@@ -27,3 +30,4 @@ subtitle: My resume in detail
     </ol>
   </div>
 </div>
+</p>
