--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,28 +1,33 @@
 ---
 layout: page
-title: Contact
-subtitle: Ways to reach out to me.
-desc: Reach out to me.
-permalink: /contact/
+title: Resume
+permalink: /resume/
+subtitle: Connect with me by -
 ---
 
-<p>Mea speciem facta postquam quae ab catulo, bracchia nepotis: est. Suae <strong>posset cingebant</strong> patris</p>
+<p>
+<figure class="site-profile">
+    <img src="{{ site.baseurl }}/assets/img/profile.jpg">
+</figure>
+<div class="site-links">
+  <div class="site-contact">
+    <ol>
+      {% if site.email %}
+      <li><a href="mailto:{{ site.email }}">Email</a></li>
+      {% endif %}
 
-<div class="projects">
-  <div class="grid no-gutters">
-    <div class="unit one-third">
-      <div class="project">
-        <h4 class="project-title"><a href="sample-work/">Project 1</a></h4>
-        <p>Laeva clamat qui Perseus erit, discrimine ramos illa <a href="sample-work/">restabat</a>: bracchia, templa, ab spectans. Monte contigit Rhodosque manus mille est omnia eiusdem nondum: qui Modo.</p>
-      </div>
-    </div>
+      {% if site.github_username %}
+      <li><a target="_blank" rel="external" href="https://github.com/{{ site.github_username }}">Github</a></li>
+      {% endif %}
 
-    <div class="unit one-third">
-      <div class="project">
-        <h4 class="project-title"><a href="sample-work/">Project 2</a></h4>
-        <p><em>Quoque videri</em>: sibi in qua nexibus rapto. Mea tecta! Orbem haut non procumbit <em>facit</em>.</p>
-      </div>
-    </div>
-  </div><!-- grid -->
+      {% if site.twitter_username %}
+      <li><a target="_blank" rel="external" href="https://twitter.com/{{ site.twitter_username }}">Twitter</a></li>
+      {% endif %}
+
+      {% if site.facebook_username %}
+      <li><a target="_blank" rel="external" href="https://facebook.com/{{ site.facebook_username }}">Facebook</a></li>
+      {% endif %}
+    </ol>
+  </div>
 </div>
-
+</p>
