--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div class="lead pretty-links">
-  Hi! this is just a sample **intro text**. You would normally put your [full name](about/) here and say something *smart* about yourself.
-
-  This could also be the good place to say were you are coming from, what you [do for a living](work/) and maybe what you are [interested in](projects/). You might also be [writing](articles/) about stuff.
-
-  But after all this is your site and I'm just a **placeholder text** so what would i know about some *home page content*.
-</div>
+<p>
+Welcome to the home page of Aditya Pakki. To navigate this site, please use the links in the header bar.
+The photograph was taken on May 6, 2017 in Salt Lake City, Utah.
+<figure class="site-profile">
+    <img src="{{ site.baseurl }}/assets/img/profile.jpg">
+</figure>
+</p>
