--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,14 +1,11 @@
 ---
 layout: page
 title: Resume
-permalink: /resume/
+permalink: /contact/
 subtitle: Connect with me by -
 ---
 
 <p>
-<figure class="site-profile">
-    <img src="{{ site.baseurl }}/assets/img/profile.jpg">
-</figure>
 <div class="site-links">
   <div class="site-contact">
     <ol>
