--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -2,29 +2,48 @@
 layout: page
 title: Resume
 permalink: /contact/
-subtitle: Connect with me by -
+subtitle: Reach out to me -
 ---
 
+* My preferred mode of communication is via Email.
 <p>
-<div class="site-links">
-  <div class="site-contact">
-    <ol>
-      {% if site.email %}
-      <li><a href="mailto:{{ site.email }}">Email</a></li>
-      {% endif %}
+<ul>
+  <li>
+    {% if site.email %}
+    <li><a href="mailto:{{ site.email }}">Email</a></li>
+    {% endif %}
+  </li>
+  <li> Telephone (385)216-5791 </li>
+  <li> Address:</br> 3283 B Walnut Street </br>
+                    Los Alamos, New Mexico </br>
+                    87544 USA
+  </li>
+  <li> Social Media
+    <div class="site-links">
+      <div class="site-contact">
+        <ol>
 
-      {% if site.github_username %}
-      <li><a target="_blank" rel="external" href="https://github.com/{{ site.github_username }}">Github</a></li>
-      {% endif %}
+          {% if site.github_username %}
+          <li><a target="_blank" rel="external" href="https://github.com/{{ site.github_username }}">Github</a></li>
+          {% endif %}
 
-      {% if site.twitter_username %}
-      <li><a target="_blank" rel="external" href="https://twitter.com/{{ site.twitter_username }}">Twitter</a></li>
-      {% endif %}
+          {% if site.linkedin_username %}
+          <li><a target="_blank" rel="external" href="https://linkedin.com/in/{{ site.linkedin_username }}">LinkedIn</a></li>
+          {% endif %}
 
-      {% if site.facebook_username %}
-      <li><a target="_blank" rel="external" href="https://facebook.com/{{ site.facebook_username }}">Facebook</a></li>
-      {% endif %}
-    </ol>
-  </div>
-</div>
+          {% if site.quora_username %}
+          <li><a target="_blank" rel="external" href="https://quora.com/profile/{{ site.quora_username }}">Quora</a></li>
+          {% endif %}
+
+          {% if site.twitter_username %}
+          <li><a target="_blank" rel="external" href="https://twitter.com/{{ site.twitter_username }}">Twitter</a></li>
+          {% endif %}
+
+          {% if site.facebook_username %}
+          <li><a target="_blank" rel="external" href="https://facebook.com/{{ site.facebook_username }}">Facebook</a></li>
+          {% endif %}
+        </ol>
+      </div>
+    </div>
+  </li>
 </p>
