reorder a couple of social media

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -8,12 +8,10 @@ subtitle: Reach out to me -
 * My preferred mode of communication is via Email.
 <p>
 <ul>
-  <li>
     {% if site.email %}
     <li><a href="mailto:{{ site.email }}">Email</a></li>
     {% endif %}
-  </li>
-  <li> Telephone (385)216-5791 </li>
+  <li> Telephone: (385) 216-5791 </li>
   <li> Address:</br> 3283 B Walnut Street </br>
                     Los Alamos, New Mexico </br>
                     87544 USA
@@ -21,8 +19,7 @@ subtitle: Reach out to me -
   <li> Social Media
     <div class="site-links">
       <div class="site-contact">
-        <ol>
-
+        <ul>
           {% if site.github_username %}
           <li><a target="_blank" rel="external" href="https://github.com/{{ site.github_username }}">Github</a></li>
           {% endif %}
@@ -42,7 +39,7 @@ subtitle: Reach out to me -
           {% if site.facebook_username %}
           <li><a target="_blank" rel="external" href="https://facebook.com/{{ site.facebook_username }}">Facebook</a></li>
           {% endif %}
-        </ol>
+        </ul>
       </div>
     </div>
   </li>
