changes to the experience tab

--- a/_pages/work.html
+++ b/_pages/work.html
@@ -1,28 +1,27 @@
 ---
 layout: page
 title: Experience
-subtitle: Happy users, happy clients.
-desc: Happy users, happy clients.
+subtitle: Organizations and roles.
+desc: Work experience.
 permalink: /experience/
 ---
 
-<p>Mea speciem facta postquam quae ab catulo, bracchia nepotis: est. Suae <strong>posset cingebant</strong> patris</p>
+<p>My experience can be broadly divided into three areas viz: teaching, research, and industry </p>
 
 <div class="projects">
-  <div class="grid no-gutters">
-    <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="sample-work/">Project 1</a></h4>
-        <p>Laeva clamat qui Perseus erit, discrimine ramos illa <a href="sample-work/">restabat</a>: bracchia, templa, ab spectans. Monte contigit Rhodosque manus mille est omnia eiusdem nondum: qui Modo.</p>
+        <h4 class="project-title">Research Experience</h4>
+        <p>Laeva clamat qui Perseus erit, discrimine ramos illa <a href="sample-work/">restabat</a> </p>
       </div>
-    </div>
 
-    <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="sample-work/">Project 2</a></h4>
-        <p><em>Quoque videri</em>: sibi in qua nexibus rapto. Mea tecta! Orbem haut non procumbit <em>facit</em>.</p>
+        <h4 class="project-title">Industry Experience </h4>
+        <p><em>Quoque videri</em></p>
       </div>
-    </div>
-  </div><!-- grid -->
+
+      <div class="project">
+        <h4 class="project-title">Teaching Experience </h4>
+        <p><em>Quoque videri</em></p>
+      </div>
 </div>
 
