add resume files

--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -12,26 +12,26 @@ permalink: /experience/
       <div class="project">
         <h4 class="project-title">Research Experience (position, org, timeline)</h4>
         <ul>
-        <li>Graduate Research Assistant, Los Alamos National Laboratory: (May 2017 - present) </li>
-        <li>Graduate Research Assistant, Scientific Computing and Imaging Institute: (May 2015 - Aug 2016) </li>  
-        <li>Independent study under Prof. Hari Sundar, University of Utah: (Aug 2014 - Dec 2014) </li>
-        <li>Undergrad student, JNTU Hyderabad: (Dec 2010 - May 2011) </li>
+        <li>Graduate Research Assistant, Los Alamos National Laboratory:(05/17 - now)</li>
+        <li>Graduate Research Assistant, Scientific Computing and Imaging Institute:(05/15 - 08/16)</li>  
+        <li>Independent study under Prof. Hari Sundar, University of Utah:(08/14-12/14)</li>
+        <li>Undergrad student, JNTU-Hyderabad:(12/10 - 05/11)</li>
         <ul>
       </div>
 
       <div class="project">
         <h4 class="project-title">Industry Experience (position, org, timeline)</h4>
         <ul>
-         <li>Contractor Technology Specialist,Goldman Sachs, Inc: (Dec 2016 - May 2017) </li>
-         <li>Software Developer, Automatic Data Processing: (Aug 2011 - June 2014) </li>
-         <li>Java Mobile developer intern, Renaissance Software Technologies: (Mar 2010 - July 2010) </li>
+         <li>Contractor Technology Specialist, Goldman Sachs,Inc:(12/16 - 05/17)</li>
+         <li>Software Developer, Automatic Data Processing:(08/11 - 06/14)</li>
+         <li>Java Mobile developer intern, Renaissance Software:(03/10 - 07/10)</li>
       </div>
 
       <div class="project">
         <h4 class="project-title">Teaching Experience (position, org, timeline)</h4>
           <ul>
-            <li> Graduate Teaching Assistant at University of Utah: (Aug 2014 - May 2015) </li>
-            <li> Instructor at Rishi MS Institute of Technology for Women ( Dec 2011 - Apr 2013) </li>
+            <li> Graduate Teaching Assistant at University of Utah:(08/14 - 05/15)</li>
+            <li> Instructor at Rishi MS Institute of Technology for Women:(12/11 - 04/13)</li>
           </ul>
       </div>
 </div>
