sync the commits

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <p>
 <figure class="site-profile">
-    <img src="{{ site.baseurl }}/assets/img/profile.jpg" height="60%">
+    <img src="{{ site.baseurl }}/assets/img/profile.jpg">
 </figure>
 Welcome to the home page of Aditya Pakki. The webpage was cloned from clenemt Github, jackal theme.
 This photograph of me was taken on May 6, 2017 in Salt Lake City, Utah.
