--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout: default
 <figure class="site-profile">
     <img src="{{ site.baseurl }}/assets/img/profile.jpg">
 </figure>
-Welcome to the home page of Aditya Pakki. The webpage was cloned from clenemt Github, jackal theme.
-This photograph of me was taken on May 6, 2017 in Salt Lake City, Utah.
+Welcome to the website of Aditya Pakki. This style was cloned from clenemt Github, jackal Jekyll theme.
+The photograph of me was taken on May 6, 2017 in Salt Lake City, Utah.
 </p>
