Reformat the experience.html

--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -12,26 +12,35 @@ permalink: /experience/
       <div class="project">
         <h4 class="project-title">Research Experience (position, org, timeline)</h4>
         <ul>
-        <li>Graduate Research Assistant, Los Alamos National Laboratory, (05/17 - now)</li>
-        <li>Graduate Research Assistant, SCI Institute,University of Utah, (05/15 - 08/16)</li>  
-        <li>Independent study under Prof. Hari Sundar, University of Utah, (08/14 - 12/14)</li>
-        <li>Undergrad student, JNTU-Hyderabad, (12/10 - 05/11)</li>
+        <li>Graduate Research Assistant; Los Alamos National Laboratory,</br>
+            Los Alamos, New Mexico; (05/17 - now)</li>
+        <li>Graduate Research Assistant, Scientific Computing and Imaging Institute, </br>
+            Salt Lake City, Utah; (05/15 - 08/16)</li>  
+        <li>Independent study under Prof. Hari Sundar, University of Utah,</br>
+            Salt Lake City, Utah; (08/14 - 12/14)</li>
+        <li>Undergrad student, JNTU-Hyderabad, </br>
+            Hyderabad, Telangana; (12/10 - 05/11)</li>
         <ul>
       </div>
 
       <div class="project">
         <h4 class="project-title">Industry Experience (position, org, timeline)</h4>
         <ul>
-         <li>Contractor Technology Specialist, Goldman Sachs,Inc., (12/16 - 05/17)</li>
-         <li>Software Developer, Automatic Data Processing, (08/11 - 06/14)</li>
-         <li>Java Mobile developer intern, Renaissance Software, (03/10 - 07/10)</li>
+         <li>Contractor Technology Specialist, Goldman Sachs,Inc., </br>
+            Salt Lake City, Utah; (12/16 - 05/17)</li>
+         <li>Software Developer, Automatic Data Processing LLC, </br>
+            Hyderabad, Telangana; (08/11 - 06/14)</li>
+         <li>Java Mobile developer intern, Renaissance Software, </br>
+            Hyderabad, Telangana; (03/10 - 07/10)</li>
       </div>
 
       <div class="project">
         <h4 class="project-title">Teaching Experience (position, org, timeline)</h4>
           <ul>
-            <li> Graduate Teaching Assistant at University of Utah, (08/14 - 05/15)</li>
-            <li> Instructor at Rishi MS Institute of Technology for Women, (12/11 - 04/13)</li>
+            <li> Graduate Teaching Assistant at University of Utah, </br>
+              Salt Lake City, Utah; (08/14 - 05/15)</li>
+            <li> Instructor at Rishi MS Institute of Technology for Women, </br>
+              Hyderabad, Telangana; (12/11 - 04/13)</li>
           </ul>
       </div>
 </div>
