--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -1,16 +1,17 @@
 ---
 layout: page
 title: Experience
-subtitle: Organizations and roles
+subtitle: What did I do, all these days:
 desc: Work experience.
 permalink: /experience/
 ---
 
-<p>My experience can be broadly divided into three areas viz: teaching, research, and industry </p>
+<p>My experience in three areas viz: teaching, research, and industry include </p>
 
 <div class="projects">
       <div class="project">
-        <h4 class="project-title">Research Experience (position, org, timeline)</h4>
+        <h4 class="project-title">Research experience </h4>
+        <div style="display: none;" id="hiddenText">
         <ul>
         <li>Graduate Research Assistant; Los Alamos National Laboratory,</br>
             Los Alamos, New Mexico; (05/17 - now)</li>
@@ -21,10 +22,12 @@ permalink: /experience/
         <li>Undergrad student, JNTU-Hyderabad, </br>
             Hyderabad, Telangana; (12/10 - 05/11)</li>
         <ul>
+        </div>
+        <a href="#" onclick="document.getElementById('hiddenText').style.display="block"; return false;">Research Experience</a>
       </div>
 
       <div class="project">
-        <h4 class="project-title">Industry Experience (position, org, timeline)</h4>
+        <h4 class="project-title">Industry Experience </h4>
         <ul>
          <li>Contractor Technology Specialist, Goldman Sachs,Inc., </br>
             Salt Lake City, Utah; (12/16 - 05/17)</li>
@@ -35,7 +38,7 @@ permalink: /experience/
       </div>
 
       <div class="project">
-        <h4 class="project-title">Teaching Experience (position, org, timeline)</h4>
+        <h4 class="project-title">Teaching Experience </h4>
           <ul>
             <li> Graduate Teaching Assistant at University of Utah, </br>
               Salt Lake City, Utah; (08/14 - 05/15)</li>
