--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -1,18 +1,18 @@
 ---
 layout: page
 title: Experience
-subtitle: Organizations and roles
+subtitle: What did I do so far
 desc: Work experience.
 permalink: /experience/
 ---
 
-<p>My experience can be broadly divided into three areas viz: teaching, research, and industry </p>
+<p>My experience below in three areas: Research, Industry, and Teaching </p>
 
 <div class="projects">
       <div class="project">
-        <h4 class="project-title">Research Experience (position, org, timeline)</h4>
+        <h4 class="project-title">Research Experience </h4>
         <ul>
-        <li>Graduate Research Assistant; Los Alamos National Laboratory,</br>
+        <li>Graduate Research Assistant, Los Alamos National Laboratory,</br>
             Los Alamos, New Mexico; (05/17 - now)</li>
         <li>Graduate Research Assistant, Scientific Computing and Imaging Institute, </br>
             Salt Lake City, Utah; (05/15 - 08/16)</li>  
@@ -24,7 +24,7 @@ permalink: /experience/
       </div>
 
       <div class="project">
-        <h4 class="project-title">Industry Experience (position, org, timeline)</h4>
+        <h4 class="project-title">Industry Experience </h4>
         <ul>
          <li>Contractor Technology Specialist, Goldman Sachs,Inc., </br>
             Salt Lake City, Utah; (12/16 - 05/17)</li>
@@ -35,7 +35,7 @@ permalink: /experience/
       </div>
 
       <div class="project">
-        <h4 class="project-title">Teaching Experience (position, org, timeline)</h4>
+        <h4 class="project-title">Teaching Experience </h4>
           <ul>
             <li> Graduate Teaching Assistant at University of Utah, </br>
               Salt Lake City, Utah; (08/14 - 05/15)</li>
