reformat the public key page

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -5,7 +5,8 @@ permalink: /contact/
 subtitle: Reach out to me -
 ---
 
-* My preferred mode of communication is via Email.
+* My preferred mode of communication is via Email, my PGP can be downloaded
+<a href="{{ site.baseurl }}/assets/files/public.key" download="adityapakki@gmail.com"> here </a>
 <p>
 <ul>
     {% if site.email %}
@@ -44,35 +45,3 @@ subtitle: Reach out to me -
     </div>
   </li>
 </p>
-My PGP public key:
------BEGIN PGP PUBLIC KEY BLOCK-----
-Version: GnuPG v1
-
-mQENBFlZtroBCACvUgL/Fa1sHFPkdB/xiiodmcBV845hFzo95aI/wmZp8spo9H8a
-VVP+h94xSpi2+eKbw1DbCnwVLagiJUduLpwbOSSvZhX4NqWP6zMNg+dLZXgZaJ9I
-KQJq0gbsxKBa07qEV6LLNNcYUFk5siYGw1yb8u0HqYnTkvFT209JGXs1eqVeH9rE
-Sk/Go+Ai04rHaF132rBo5fVRvfgs3nkbUKKC1v91LqpsDySUA81UpTx3rJV6cW55
-J8fycg8lFOQ2gUeWRr1YuGfpBHWDJStzVxvacLRMElv8VlIBHlorS9jSDM57vN5g
-FZBK7ZvB9Tec5/14vXSxUaE2aYs3KwM1w0kjABEBAAG0NUFkaXR5YSBQYWtraSAo
-RGVjcnlwdCBlbWFpbHMpIDxhZGl0eWFwYWtraUBnbWFpbC5jb20+iQE4BBMBAgAi
-BQJZWba6AhsDBgsJCAcDAgYVCAIJCgsEFgIDAQIeAQIXgAAKCRAKeLa4HBzuKBrv
-B/9uRgFvQwiPJgLObmWdbHcGjsmxQK83nzlbEYEVoFy9fm9uHVQN9ndNRb2vHVih
-L2+BMzNGIcCUAOb+sjA9qVkJYUxz0dNlOIT9/vTaLmKwM5IY1tj4FyOKdHAlvQwN
-Il+PUYE37/WnBMpNPIZrT5Sd7CETIFQjWe/e3LUtL9PMKljAnu+W3lfjUIhQXhZQ
-wFjXtFnUBCe1DCk2X1rd4q57GQYBfnDRToamQ74Lyl+kZNjtpRm+K88gCsO1vuXh
-CkH67AOgCUyvlVLcDiLwiG7pqiqXbdVrFGmc+/wmNsYdB8XPid1OW1gvngoD+Kgo
-7ghWv2W/URHQ2HZKhyB73DEPuQENBFlZtroBCAC+6sm1E2FCJuAjp/jObNv3P4+1
-FMPxQ/ozG6kT1aSao1+ul/2ebcCgDLTWlWY3IyRSJUM/Aa0X8x+2wkI8NsgbtJDA
-SmG1Z00tgd4LoOwytyhDq+XiYzUy2c1RIs7RWwh/nsABFBIq9F6wkhvw2R6qfkrd
-YFX4EIJ/z1oQQ7lB3Grtx70+DuWBdIsLiKKK69Fqh2QRl8sHah1EZRhGRL1kHFvi
-01QqLjRaDPWFhKNRYHiFOVKmMVv8gp142N/BjPc0tNGuqW287Sk0rDt2ibHtusUd
-QUBuJmNntHbM2FxnIBX6uygfN2sxvy78Ne12Ihtcsy9gQatRC0MnezQyg631ABEB
-AAGJAR8EGAECAAkFAllZtroCGwwACgkQCni2uBwc7iiKNwgAjXkVwVGS0ss0Urlf
-rZY4KHWD22nMYN2Ha5u4uRm7TR12suML+ZY7wGilI+fzsiQIL5vSfm8K9nLJVnC1
-x80q7y6JeJKz4lidGq0GkQpSSCUByZz2TgxkGF02dlAPEBVOPW7QN7wpWcfbStcH
-mNMFd2dClMv8Vefa5Cztn20Qe3UAZGQfoUsRK2qcC6M6EIlNra7i9mWb9Lp/kxik
-7l7LWUWzfQE2D5taGbgczAKK8GERHwP8YdCdd2EJVc7CLfkf+8yN79scOAb5K7q9
-lSgTb+nvLTjfcfOoRccdv411AMHykreVS0dijfU4NUXbvqHydPlVimZzjzRqYS9k
-0cflHA==
-=QdKm
------END PGP PUBLIC KEY BLOCK-----
