--- a/about/index.html
+++ b/about/index.html
@@ -94,18 +94,18 @@
 
   <p>
 Hi there, My name is Aditya and I’m currently a summer intern at Los Alamos National Laboratory, New Mexico in the Data Science at Scale summer school. 
-I’ll be starting my Ph.D. studies in Computer Science at the University of Minnesota, Twin Cities in the Fall of 2017.
+I’ll be starting my Ph.D. studies in <a href="https://www.cs.umn.edu" target="_blank"> Computer Science &amp; Engineering </a>at the University of Minnesota, Twin Cities in the Fall of 2017.
 </p>
 
   <p>
 I’ve a Masters degree in Computer Science from University of Utah, <a href="https://www.cs.utah.edu" target="_blank">School of Computing</a> in the summer 
 of 2016. I was advised by <a href="http://sci.utah.edu/people/mb.html" target="_blank">Prof. Martin Berzins</a> , during my time at the 
 <a href="https://sci.utah.edu" target="_blank">Scientific Computing and Imaging Institute </a> in the <a href="utah.edu" target="_blank">University of Utah </a>. 
-Earlier, I got my Bachelors degree in Information Technology at <a href="http://jntuh.ac.in/" target="_blank">Jawaharlal Nehru Technological University</a>, Hyderabad, India where I was mentored by Prof. P Gopalakrishna.
-
+Earlier, I got my Bachelors degree in Information Technology at <a href="http://jntuh.ac.in/" target="_blank">Jawaharlal Nehru Technological University</a>, Hyderabad, India where I was mentored by P Gopalakrishna.
 </p>
 
 </div>
+<p>I’ve spent the entirety of my childhood in <a href="https://en.wikipedia.org/wiki/Hyderabad">Hyderabad, India</a>, mostly playing football and biking around.</p>
 
   </div>
 
