Update job and work ex details

--- a/about/index.html
+++ b/about/index.html
@@ -93,9 +93,9 @@
     <div class="pretty-links">
 
   <p>
-Hi there, My name is Aditya and I’m currently a summer intern at Los Alamos National Laboratory, New Mexico in the Data Science at Scale summer school. 
-I’ll be starting my Ph.D. studies in <a href="https://www.cs.umn.edu" target="_blank"> Computer Science &amp; Engineering </a>at the University of Minnesota, Twin Cities in the Fall of 2017.
-</p>
+Hi there, My name is Aditya and I’m excited to start my Ph.D. studies in <a href="https://www.cs.umn.edu" target="_blank"> Computer Science &amp; Engineering </a>at the University of Minnesota, Twin Cities in the Fall of 2017.
+I’ve just completed a 3 month summer internship at the Los Alamos National
+Laboratory, New Mexico in the Data Science at Scale summer school. I was advised by Dr. Jozsef Bakosi </p>
 
   <p>
 I’ve earned a Masters degree in Computer Science from University of Utah, <a href="https://www.cs.utah.edu" target="_blank">School of Computing</a> in the summer 
