--- a/contact/index.html
+++ b/contact/index.html
@@ -98,9 +98,9 @@
     <li><a href="mailto:adityapakki@gmail.com">Email</a></li>
     
   <li> Telephone: (385) 216-5791 </li>
-  <li> Address:</br> PO Box 1663, MS P290 </br>
-                    Los Alamos, New Mexico </br>
-                    87545 USA
+  <li> Address:</br> 1759 W 75 St Apt 1A </br>
+                    Richfield, Minnesota </br>
+                    55423 USA
   </li>
   <li> Social Media
     <div class="site-links">
