--- a/experience/index.html
+++ b/experience/index.html
@@ -93,7 +93,7 @@
 
 <p><strong>Research Experience</strong></p>
 <ul>
-  <li>(05/17 - present) Graduate Research Assistant <br />
+  <li>(05/17 - 08/17) Graduate Research Assistant <br />
 Los Alamos National Laboratory, Los Alamos, New Mexico.</li>
   <li>(05/15 - 08/16) Graduate Research Assistant <br />
 Scientific Computing and Imaging Institute, Salt Lake City, Utah.</li>
@@ -115,6 +115,8 @@ Renaissance Software, Hyderabad, Telangana.</li>
 
 <p><strong>Teaching Experience</strong></p>
 <ul>
+  <li>(08/17 - present) Graduate Teaching Assistant <br />
+University of Minnesota, Minneapolis, Minnesota.</li>
   <li>(08/14 - 05/15) Graduate Teaching Assistant <br />
 University of Utah, Salt Lake City, Utah.</li>
   <li>(12/11 - 04/13) Instructor <br />
