--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       <div class="site-content">
         <img src="/assets/img/profile.jpg" class="site-profile">
 <h3> Aditya Pakki </h3>
-<h5> M.S. Computer Science </h5>
-<h5> University of Utah </h5>
+<h5> Ph.D. candidate in Computer Science </h5>
+<h5> University of Minnesota Twin Cities </h5>
 <h5> Email: [first name] dot [last name] at gmail dot com</h5> <br />
 Welcome to the website of Aditya Pakki. This style was cloned from clenemt 
 Github, jackal Jekyll theme. The photograph of me was taken on May 7, 2017
