--- a/experience/index.html
+++ b/experience/index.html
@@ -93,6 +93,8 @@
 
 <p><strong>Research Experience</strong></p>
 <ul>
+  <li>(09/17 - present) Graduate Research Assistant <br />
+Advisor: Prof Kangjie Lu, University of Minnesota.</li>
   <li>(05/17 - 08/17) Graduate Research Assistant <br />
 Los Alamos National Laboratory, Los Alamos, New Mexico.</li>
   <li>(05/15 - 08/16) Graduate Research Assistant <br />
