--- a/research/index.html
+++ b/research/index.html
@@ -97,12 +97,17 @@ numerical codes on some of the largest supercomputers in the US.
 </p>
 <h3 id="technical-reports">Technical reports:</h3>
 <ol>
+  <li>Los Alamos National Laboratory Summer project presentation
+  <a href="/assets/files/root.pdf" target="_blank">
+  <img src="/assets/img/pdf.png" class="pdf-image" />
+  </a> </li>
+
   <li>B. Peterson, N. Xiao, J. Holmen, S. Chaganti, A. Pakki, J. Schmidt, D. Sunderland, A. Humphrey, M. Berzins. “Developing Uintah’s Runtime System For Forthcoming Architectures,” Subtitled “Refereed paper presented at the RESPA 15 Workshop at SuperComputing 2015 Austin Texas,” SCI Institute, 2015.
   <a href="/assets/files/respa15.pdf" target="_blank">
   <img src="/assets/img/pdf.png" class="pdf-image" />
   </a> </li>
 
-  <li>Project report done as part of M.S degree requirement at University of Utah. 
+  <li>M.S. project report at University of Utah. 
   <a href="/assets/files/report.pdf" target="_blank">
     <img src="/assets/img/pdf.png" class="pdf-image" />
   </a> </li>
