Changes due to ffi

--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="http://localhost:4000/about/" />
 <meta property="og:site_name" content="Aditya Pakki" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"About","name":"Aditya Pakki","url":"http://localhost:4000/about/","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
+{"@type":"WebSite","name":"Aditya Pakki","url":"http://localhost:4000/about/","headline":"About","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <!-- SEO metas -->
