--- a/contact/index.html
+++ b/contact/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="http://localhost:4000/contact/" />
 <meta property="og:site_name" content="Aditya Pakki" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Reach","url":"http://localhost:4000/contact/","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/contact/","headline":"Reach","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <!-- SEO metas -->
