--- a/experience/index.html
+++ b/experience/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="http://localhost:4000/experience/" />
 <meta property="og:site_name" content="Aditya Pakki" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Experience","url":"http://localhost:4000/experience/","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/experience/","headline":"Experience","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <!-- SEO metas -->
