--- a/projects/sample-project/index.html
+++ b/projects/sample-project/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="http://localhost:4000/projects/sample-project/" />
 <meta property="og:site_name" content="Aditya Pakki" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Project","url":"http://localhost:4000/projects/sample-project/","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/projects/sample-project/","headline":"Project","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <!-- SEO metas -->
