--- a/resume/index.html
+++ b/resume/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="http://localhost:4000/resume/" />
 <meta property="og:site_name" content="Aditya Pakki" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Resume","url":"http://localhost:4000/resume/","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/resume/","headline":"Resume","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <!-- SEO metas -->
