--- a/research/index.html
+++ b/research/index.html
@@ -94,7 +94,7 @@ numerical codes on some of the largest supercomputers in the US.
   <p>My resume can be downloaded at 
 <a href="/assets/files/resume.pdf" target="_blank">
 <img src="/assets/img/pdf.png" class="pdf-image" />
-</a> and my CV at 
+</a> and CV at 
 <a href="/assets/files/aditya_cv.pdf" target="_blank">
 <img src="/assets/img/pdf.png" class="pdf-image" />
 </a></p>
