--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="http://localhost:4000/about/" />
 <meta property="og:site_name" content="Aditya Pakki" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"About","name":"Aditya Pakki","url":"http://localhost:4000/about/","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
+{"@type":"WebSite","name":"Aditya Pakki","url":"http://localhost:4000/about/","headline":"About","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <!-- SEO metas -->
@@ -86,7 +86,7 @@
 Hi there! My name is Aditya and I’m a second year Ph.D student in 
 <a href="https://www.cs.umn.edu">Computer Science &amp; Engineering</a>
 at the University of Minnesota. My research interests are in the areas of
-computer security, operating systems, and Machine Learning. I’m fortunate to be
+computer security, operating systems, and machine learning. I’m fortunate to be
 advised by <a href="https://www-users.cs.umn.edu/~kjlu/">Prof. Kangjie Lu</a>.
 </p>
 
@@ -110,7 +110,6 @@ mostly playing football and biking around.
 is my preferred mode of communication. 
 <a href="/assets/files/public.key" download="adityapakki@gmail.com"> PGP </a><br />
 +1 (385) 216-5791 | <a target="_blank" rel="external" href="https://github.com/adityapakki">Github</a> |
-<a target="_blank" rel="external" href="https://linkedin.com/in/aditya-pakki">LinkedIn</a> |
 <a target="_blank" rel="external" href="https://twitter.com/amthunderbird">Twitter</a><br />
 University of Minnesota<br />
 5-248 Keller Hall<br />
@@ -124,7 +123,7 @@ Minneapolis, MN, 55455</p>
       </div>
       <footer class="site-footer">
 
-  <div class="site-copy">&copy; 2018<span class="site-author">Aditya Pakki</span></div>
+  <div class="site-copy">&copy; 2019<span class="site-author">Aditya Pakki</span></div>
     <div class="site-source">
       <ul>
         <li><a target="_blank" href="https://github.com/adityapakki/">Source</a></li>
