--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Aditya Pakki" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"Home","name":"Aditya Pakki","url":"http://localhost:4000/","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
+{"@type":"WebSite","name":"Aditya Pakki","url":"http://localhost:4000/","headline":"Home","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <!-- SEO metas -->
@@ -74,7 +74,7 @@
         <img src="/assets/img/profile.jpg" class="site-profile">
 <h3> Aditya Pakki </h3>
 <h5> Ph.D. student in Computer Science </h5>
-<h5> University of Minnesota Twin Cities </h5>
+<h5> University of Minnesota </h5>
 <h5> Email: [first name] dot [last name] at gmail dot com</h5> <br />
 Welcome to my homepage. The style was cloned from clenemt Github, 
 jackal Jekyll theme. The photograph was taken on Sep 18, 2017
@@ -83,7 +83,7 @@ in Minneapolis, Minnesota.
       </div>
       <footer class="site-footer">
 
-  <div class="site-copy">&copy; 2018<span class="site-author">Aditya Pakki</span></div>
+  <div class="site-copy">&copy; 2019<span class="site-author">Aditya Pakki</span></div>
     <div class="site-source">
       <ul>
         <li><a target="_blank" href="https://github.com/adityapakki/">Source</a></li>
