--- a/research/index.html
+++ b/research/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="http://localhost:4000/research/" />
 <meta property="og:site_name" content="Aditya Pakki" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Research","url":"http://localhost:4000/research/","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/research/","headline":"Research","author":{"@type":"Person","name":"Aditya Pakki"},"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <!-- SEO metas -->
@@ -122,7 +122,7 @@ numerical codes on some of the largest supercomputers in the US.
       </div>
       <footer class="site-footer">
 
-  <div class="site-copy">&copy; 2018<span class="site-author">Aditya Pakki</span></div>
+  <div class="site-copy">&copy; 2019<span class="site-author">Aditya Pakki</span></div>
     <div class="site-source">
       <ul>
         <li><a target="_blank" href="https://github.com/adityapakki/">Source</a></li>
