--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta http-equiv="refresh" content="2;url=https://www.google.com/search?q=asshole">
   <title>
   Home | Aditya Pakki
-  
   </title>
 
   <!-- Begin Jekyll SEO tag v2.5.0 -->
